--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 #bodyone {
-  background: url(http://pre07.deviantart.net/c293/th/pre/f/2009/350/b/e/red_textured_paper_by_thaily_stock.jpg) no-repeat center center fixed;
+  background: url(https://i.imgur.com/YkdTVHt.png) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
